add member model

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -2,7 +2,7 @@
 	<ul class="nav nav-list">
 		<% if current_user %>
 		<li>
-			<%= link_to "Link1", "/path1"  %>
+			<%= link_to "會員管理", members_path  %>
 		</li>
 		<li>
 			<%= link_to "Link2", "/path2"  %>
