--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -40,4 +40,4 @@
 	<%= t('.unhappy', default: 'Unhappy') %>? <%= link_to t('.cancel_my_account', default: 'Cancel my account'), registration_path(resource_name), data: { confirm: t('.are_you_sure', default: "Are you sure?") }, method: :delete %>.
 </p>
 -->
-<%= link_to t('.back', default: '◀ Back'), :back %>
+<%= link_to t('.back', default: '◀ Back'), root_path %>
