add member search, show and coin functionality

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,3 +9,17 @@
 .red {
   color: red;
 }
+
+.col-right {
+  text-align: right;
+}
+
+.member-top {
+  margin-top: 10px;
+}
+
+.member-action {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  
+}
