--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,33 +1,64 @@
-<h2>會員管理</h2>
+<h2><%= t('.title', default: "Members") %></h2>
 <hr />
-<%= link_to "測試新增會員", new_member_path, class: "btn btn-default" %>
-
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= t('.full_name', default: 'Full name')%></th>
-      <th><%= t('.phone', default: 'Phone') %></th>
-      <th><%= t('.coin', default: 'Coin') %></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @members.each do |member| %>
-      <tr>
-        <td><%= member.full_name %></td>
-        <td><%= member.phone %></td>
-        <td><%= member.coin %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_member_path(member), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      member_path(member),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-xs btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div id="member-lookup">
+	<!-- search -->
+	<div class="row">
+		<%= form_tag search_members_path, remote: true, method: :get, id:'member-lookup-form' do %>
+		<div class="form-group row col-md-12">
+			<div class="col-md-2">
+				<%= link_to t('.new', default: "New Member"), new_member_path, class: "btn btn-default" %>
+			</div>
+			<div class="col-md-8">
+				<%= text_field_tag :search_param, params[:search_param],
+					placeholder: t('.enter_the_phone_number', default: "Enter your cellphone Number"), autofocus: true,
+					class: 'form-control search-box' %>
+			</div>
+			<div class="col-md-2">
+				<%= button_tag(type: :submit, class: 'btn btn-success') do %>
+				<i class="fa fa-search"></i> <%= t('.search', default: 'Search')%>
+				<% end %>
+			</div>
+		</div>
+		<% end %>
+	</div>
+	<!-- end search -->
+	
+	<!-- results -->
+	<% if @members %>
+		<% if @members.size > 0 %>
+			<div id="member-lookup-results">
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th><%= t('.full_name', default: 'Full name')%></th>
+							<th><%= t('.phone', default: 'Phone') %></th>
+							<th><%= t('.coin', default: 'Coin') %></th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody>
+						<% @members.each do |member| %>
+						<tr>
+							<td><%= member.full_name %></td>
+							<td><%= member.phone %></td>
+							<td><%= member.coin %></td>
+							<td> 
+								<%= link_to t('.show', default: 'Show'), member_path(member), class: 'btn btn-default btn-xs' %>
+								<%= link_to t('.add_coin', default: 'Add coin'), coin_member_path(member), class: 'btn btn-warning btn-xs'%>
+								<%= link_to t('.trade', default: 'Add trade'), "#", class: "btn btn-danger btn-xs" %>
+							</td>
+						</tr>
+						<% end %>
+					</tbody>
+				</table>
+			</div>
+		<% else %>
+			<p class="col-md-12 well">
+				<%= t('.cant_find', default: 'Can not find this Member')%>
+			</p>
+		<% end %>
+	<% end %>
+	<div id="member-lookup-errors"></div>
+	<!-- end results -->	
+</div>
 
