--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -12,6 +12,7 @@
 </div>
 <hr />
 <%= render 'member' %>
+<%= render 'trades/trade'%>
 <div>
 	[ <%= link_to t('.back', default: "◀ Back"), members_path%> ]
 </div>
