--- a/app/views/trades/_trade.html.erb
+++ b/app/views/trades/_trade.html.erb
@@ -1,7 +1,7 @@
 <div>
   	<h4><%= t('.trade_list', default: 'Trade list')%></h4>
-	<% if @member.trades %>
-		<% if @member.trades.size > 0 %>
+	<% if @trades %>
+		<% if @trades.size > 0 %>
 			<table class="table table-striped">
 				<thead>
 					<tr>
@@ -12,7 +12,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<% @member.trades.each do |trade| %>
+					<% @trades.each do |trade| %>
 					<tr>
 						<td><%= trade.trade_date %></td>
 						<td><%= trade.trade_name %></td>
@@ -28,6 +28,7 @@
 							<% end %>
 						</td>
 						<td>
+							<!--<%= trade.creator %>-->
 							<%= link_to t('.show', default: 'Show'), trade_path(:id => trade.id, :member_id => @member.id), class: 'btn btn-default btn-xs'%>
 							<%= link_to t('.destroy', default: 'Delete'), trade_path(:id => trade.id, :member_id => @member.id), method: :delete, 
 										data: {confirm: t('.confirm', default: 'Are you sure?')}, class: 'btn btn-danger btn-xs'%>
@@ -41,5 +42,6 @@
 				<%= t('.no_data', default: 'You dont have any trades.')%>
 			</div>
 		<% end %>
+		<%= render 'shared/paginate', obj: @trades%>
 	<% end %>
 </div>
