--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,7 +7,7 @@
 		<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 		<div class="form-group">
 			<%= f.label t('.email', default: 'Email') %>
-			<%= f.email_field :email, autofocus: true, class: 'form-control' %>
+			<%= f.email_field :email, autofocus: true, class: 'form-control', disabled: true %>
 		</div>
 		<div class="form-group">
 			<div class="col-md-6 no-padding">
