--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,7 +5,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<%= link_to "Crystal 管理介面", root_path, class: 'navbar-brand'%>
+		<%= link_to t('.brand', default: 'Crystal Management'), root_path, class: 'navbar-brand'%>
 		<div class="navbar-collapse collapse navbar-responsive-collapse">
 			<ul class="nav navbar-nav navbar-right">
 				<% if current_user %>
@@ -14,11 +14,11 @@
             				edit_user_registration_path, title: 'Edit Profile'%>
 				</li>
 				<li>
-					<%= link_to "登出", destroy_user_session_path, method: :delete %>
+					<%= link_to t('.logout', default: "Logout"), destroy_user_session_path, method: :delete %>
 				</li>
 				<% else %>
 				<li>
-					<%= link_to "登入", new_user_session_path %>
+					<%= link_to t('.login', default: "Login"), new_user_session_path %>
 				</li>
 				<% end %>
 			</ul>
