add member trades function

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -6,7 +6,7 @@
 			<div class="col-sm-5 control-label">
 				<%= f.label :last_name %>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-4 control-label-left">
 				<%= f.text_field :last_name, class: "form-control", 
 						placeholder: t('.enter_your_last_name', default: "Enter your last name"), autofocus: true %>
 			</div>
