--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,6 +14,12 @@
   text-align: right;
 }
 
+.control-label-left {
+  text-align: left;
+  margin-bottom: 0;
+  padding-top: 7px;
+}
+
 .member-top {
   margin-top: 10px;
 }
