--- a/app/views/prod_types/_prod_type_item.html.erb
+++ b/app/views/prod_types/_prod_type_item.html.erb
@@ -1,5 +1,5 @@
 <tr>
-	<td><%= prod_type_counter + 1 %></td>
+	<td><%= prod_type_counter + calculate_page(params[:page]) %></td>
 	<td><%= prod_type.name %></td>
 	<td> <%= link_to t('.edit', default: 'Edit'), edit_prod_type_path(prod_type), class: 'btn btn-success btn-xs' %> </td>
 </tr>
