--- a/app/views/products/_product_item.html.erb
+++ b/app/views/products/_product_item.html.erb
@@ -1,5 +1,5 @@
 <tr>
-	<td><%= product_counter + 1 %></td>
+	<td><%= product_counter + calculate_page(params[:page]) %></td>
 	<td><%= product.prod_type.name %></td>
 	<td><%= product.name %></td>
 	<td><%= "#{product.price} #{t('.dollars', default: 'Dollars')}" %></td>
