--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -1,10 +1,13 @@
-<%= render "shared/errors", obj: @trade %>
+
 <h2><%= t('.title', default: "New Trade") %></h2>
 <hr />
 <%= render 'members/member'%>
 <%= render 'form' %>
-<%= render 'trade_detail', trades: @today_trades %>
-<div class="member-top">
-	[ <%= link_to t('.back', default: "◀ Back"), members_path %> ]
-</div>
+<%= form_for(@trade, :html => {class: "form-horizontal", role: "form"}, :url => {:action => "create", :id => @member} ) do |f| %>
+	<div class="form-group">
+		<div class="col-sm-offset-2 col-sm-10">
+			<%= f.submit t('.submit', default: 'Submit'), class: 'btn btn-warning btn-block' %>
+		</div>
+	</div>
+<% end %>
 
