--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -62,11 +62,11 @@
 					class: "btn btn-primary btn-lg") %>
 			</div>
 		</div>
-		<div class="form-group">
+		<!--<div class="form-group">
 			<div class="col-sm-offset-5 col-sm-2">
 				[ <%= link_to t('.back', default: "◀ Back"), @member.new_record? ? members_path : member_path(@member)%> ]
 			</div>
-		</div>
+		</div>-->
 		<% end %>
 	</div>
 </div>
