--- a/app/views/members/_lookup.html.erb
+++ b/app/views/members/_lookup.html.erb
@@ -3,10 +3,10 @@
 	<div class="row">
 		<%= form_tag search_members_path, remote: true, method: :get, id:'member-lookup-form' do %>
 		<div class="form-group row col-md-12">
-			<div class="col-md-2">
+			<!--<div class="col-md-2">
 				<%= link_to t('.new', default: "New Member"), new_member_path, class: "btn btn-default" %>
-			</div>
-			<div class="col-md-8">
+			</div>-->
+			<div class="col-md-10">
 				<%= text_field_tag :search_param, params[:search_param],
 					placeholder: t('.enter_the_phone_number', default: "Enter your cellphone Number"), autofocus: true,
 					class: 'form-control search-box' %>
@@ -25,26 +25,27 @@
 	<% if @members %>
 		<% if @members.size > 0 %>
 			<div id="member-lookup-results">
-				<table class="table table-striped">
+				<table class="table table-striped" id="member-list">
 					<thead>
 						<tr>
 							<th><%= t('.full_name', default: 'Full name')%></th>
 							<th><%= t('.phone', default: 'Phone') %></th>
+							<th><%= t('.birthdate', default: 'Birth Date')%>
 							<th><%= t('.coin', default: 'Coin') %></th>
-							<th></th>
+							<!--<th></th>-->
 						</tr>
 					</thead>
 					<tbody>
 						<% @members.each do |member| %>
-						<tr>
+						<tr data-link="<%= member_path(member)%>" >
 							<td><%= member.full_name %></td>
 							<td><%= member.phone %></td>
+							<td><%= member.birthdate %></td>
 							<td><%= "#{member.coin} #{t('.dollars', default: 'Dollars')}" %></td>
-							<td> 
+							<!--<td> 
 								<%= link_to t('.show', default: 'Show'), member_path(member), class: 'btn btn-default btn-xs' %>
-								<%= link_to t('.add_coin', default: 'Add coin'), coin_path(member), class: 'btn btn-warning btn-xs'%>
-								<%= link_to t('.trade', default: 'Add trade'), new_trade_path(member), class: "btn btn-primary btn-xs" %>
-							</td>
+								
+							</td>-->
 						</tr>
 						<% end %>
 					</tbody>
